--- a/laravel-admin-html/brands.html
+++ b/laravel-admin-html/brands.html
@@ -11,6 +11,9 @@
 		<!-- Theme style -->
 		<link rel="stylesheet" href="css/adminlte.min.css">
 		<link rel="stylesheet" href="css/custom.css">
+
+
+		sss
 	</head>
 	<body class="hold-transition sidebar-mini">
 		<!-- Site wrapper -->
